# mabquiz

./: .env.example  .metadata  DATABASE_SETUP.md  MAB_IMPROVEMENTS.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  analysis.txt  analysis_new.txt  analysis_output.txt  deploy.bat  firebase.json  pubspec.yaml  railway.toml  requirements.txt  start.py  test_simple.dart
.github/: copilot-instructions.md
android/app/: build.gradle.kts  (+1 more)
app/: db.py  main.py
backend/: .env.example  Dockerfile  MIGRATION_GUIDE.md  README.md  create_tables.py  deploy.sh  migrate_tables.py  pyproject.toml  requirements.txt  run_migration.py  seed_data.py
backend/app/: db.py  main.py  models.py  routers.py
backend/app/auth/: jwt_handler.py  password_utils.py
backend/app/cache/: redis_manager.py
backend/app/models/: __init__.py  course.py  knowledge_type.py  mab_state.py  question.py  question_metrics.py  quiz_session.py  subtopic.py  topic.py  user.py  user_role.py
backend/app/routers/: __init__.py  admin.py  auth.py  auth_backup.py  difficulty.py  main.py  sync.py
backend/app/services/: __init__.py  difficulty_calculator.py  gemini_service.py
backend/app/tasks/: difficulty_tasks.py
docs/: firebase_quiz_structure.json  firebase_setup.md  firebase_structure.json
lib/: firebase_options.dart  main.dart
scripts/: build_production.bat  run_android_emulator.bat  run_dev.bat  run_mock.bat  run_prod.bat
test/: widget_test.dart
web/: index.html  manifest.json
web-admin/: .env.example  Dockerfile  package-lock.json  package.json  railway.toml  tailwind.config.ts
(+148 files in other folders)
